--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "project-clothify.ai",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
 "scripts": {
   "start": "node server.js"
 },
